[package]
name = "rune-interpreter"
version = "0.6.16"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/rune-cli"
keywords = ["language", "scripting"]
categories = []
description = """
An interpreter for Rune, an embeddable dynamic programming language for Rust. 
"""

[dependencies]
codespan-reporting = "0.9.5"
anyhow = "1.0.32"
bincode = "1.3.1"
log = "0.4.11"

rune = {version = "0.6.16", path = "../rune", features = ["modules"]}
rune-macros = {version = "0.6.16", path = "../rune-macros"}
runestick = {version = "0.6.16", path = "../runestick"}

